--- a/vignettes/V1Overview.Rnw
+++ b/vignettes/V1Overview.Rnw
@@ -1,5 +1,5 @@
-%\VignetteIndexEntry{oligo - Primer}
-%\VignetteKeywords{expression, exon, gene, tiling, SNP}
+%\VignetteIndexEntry{01 - Overview}
+%\VignetteKeywords{expression, exon, tiling, SNP}
 %\VignettePackage{oligo}
 
 %%% The real .Rnw is under inst/scripts.
